<resources>
    <string name="site_url" translatable="false"></string>
    <string name="app_name" translatable="false">Area Personale</string>
    <string name="btn_login">Accedi</string>
    <string name="edt_password" translatable="false">Password</string>
    <string name="edt_id">ID utente</string>
    <string name="iccid" translatable="false">ICCID</string>
    <string name="active">Attiva</string>
    <string name="error_login">ID utente o password non corretto.</string>
    <string name="error_forget">ID utente o email non corretta.</string>
    <string name="error_forget1">Campo vuoto o email non corretta.</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- SimFragments -->
    <string name="error_iccid">Inserire il codice di 19 cifre</string>
    <string name="tv_edit">Modifica</string>
    <string name="tv_show">Visualizza</string>
    <string name="coming_soon">Funzionalità disponibile a breve</string>

    <!-- ChangeEmailActivity -->
    <string name="change_email_title">Cambio Email</string>
    <string name="btn_change_email">Cambia Email</string>
    <string name="tv_email">Email</string>
    <string name="new_email">Nuova Email</string>
    <string name="email_wrong">Inserire una email valida</string>
    <string name="email_change_success">Il tuo indirizzo email è stato modificato con successo.</string>

    <!-- ChangePasswordActivity -->
    <string name="change_password_title">Cambio Password</string>
    <string name="edt_newpassword">Nuova Password</string>
    <string name="edt_oldpassword">Vecchia Password</string>
    <string name="btn_change_password">Cambia Password</string>
    <string name="password_change_success">La tua password è stata modificata con successo.</string>
    <string name="wrong_password">Password errata</string>

    <!-- drawer_menu -->
    <string name="nav_credit">Consumi e credito</string>
    <string name="nav_sim">Attivazione della sim</string>
    <string name="nav_info">I miei dati personali</string>
    <string name="nav_conditions">Le condizioni della mia offerta</string>
    <string name="nav_options">Le mie opzioni</string>
    <string name="nav_services">I miei servizi</string>
    <string name="nav_aboutus">Chi siamo</string>
    <string name="split_menu">Info</string>
    <string name="nav_settings">Impostazioni</string>
    <string name="nav_logout">Esci</string>

    <!-- ErrorConnectionActivity -->
    <string name="errorconnection">Connessione a internet assente</string>
    <string name="errorconnection_one">Riconetti il dispositivo e riprova…</string>
    <string name="italy">Italia</string>
    <string name="estero">Estero</string>

    <!-- AboutActivity -->
    <string name="reload">Ricarica</string>
    <string name="toggle_enable">Attivo</string>
    <string name="toggle_disable">Non attivo</string>
    <string name="version">Versione</string>
    <string name="source_code">Codice Sorgente</string>
    <string name="author">Autore</string>
    <string name="authorapi">Autore e creatore delle API</string>
    <string name="designer">Designer</string>
    <string name="content">L\'app è stata creata in modo non ufficiale ILIAD SPA. non è responsabile in alcun modo</string>
    <string name="donate">Offrici una birra</string>
    <string name="follow">Seguimi su instagram</string>
    <string name="old_version_title">Versione obsoleta</string>
    <string name="old_version">Aggiorna l\'applicazione e riprova…</string>
    <string name="update">Aggiorna</string>
    <string name="licence">Termini e condizioni</string>


    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="dialog_exit">Sei sicuro di voler uscire?</string>
    <string name="press_back">Premere ancora una volta per uscire</string>

    <!-- link request -->
    <string name="alert" translatable="false">alert/</string>
    <string name="login" translatable="false">login/</string>
    <string name="recover" translatable="false">recover/</string>
    <string name="infomation" translatable="false">information/</string>
    <string name="sim" translatable="false">sim/</string>
    <string name="credit" translatable="false">credit/</string>
    <string name="document" translatable="false">document/</string>
    <string name="services" translatable="false">services/</string>
    <string name="options" translatable="false">options/</string>
    <string name="recharge" translatable="false">recharge/</string>
    <string name="voicemail" translatable="false">voicemail/</string>
    <string name="support" translatable="false">support/</string>


    <!-- MasterCreditFragment Activity -->
    <string name="residual_credit">CREDITO RESIDUO</string>
    <string name="days_renewal">GIORNI AL PROSSIMO RINNOVO</string>
    <string name="day_renewal">GIORNO AL PROSSIMO RINNOVO</string>

    <string name="loading">Caricamento…</string>
    <string name="updatedat">Aggiornato alle</string>
    <string name="consumptiondetail">Dettaglio consumo</string>
    <string name="consumptionroamingdetail">Dettaglio consumo estero</string>
    <string name="stay_connected">Resta connesso</string>
    <string name="nav_contactus">Contattaci</string>
    <string name="warning">Attenzione</string>
    <string name="accept">Accetto</string>
    <string name="read">Dichiaro di aver letto</string>
    <string name="show">Non mostrare più</string>

    <string name="chargeNumber">Ricarica il tuo numero</string>
    <string name="edtCvv" translatable="false">CVV</string>
    <string name="edtExpiration">Data di scadenza</string>
    <string name="edtCard">Numero della carta</string>
    <string name="missing">mancante</string>
    <string name="wrong_credit_card">Carta di credito non valida</string>
    <string name="nav_voicemail">Segreteria telefonica</string>
    <string name="add_access">Inserisci le credenziali di accesso</string>
    <string name="your_email">La tua email</string>
    <string name="edt_id_forget">ID Utente (8 cifre)</string>
    <string name="edt_surname_forget">Cognome</string>
    <string name="edt_name_forget">Nome</string>
    <string name="tv_title_foget">Password dimenticata</string>
    <string name="edt_email_forget">La tua email</string>
    <string name="done_forget">Conferma</string>
    <string name="tv_forget_id">Non conosci il tuo ID utente?</string>
    <string name="tv_forget_id_back">Conosci il tuo ID utente?</string>
    <string name="tv_forget_password">Recupera le tue credenziali</string>
    <string name="account_already_use">Account già in uso</string>

    <string name="notification_channel_id" translatable="false">default</string>
    <!-- SettingsActivity -->
    <string name="one_title">Recupero elenco contatti</string>
    <string name="one_description">Visualizzare i nomi dei contatti</string>
    <string name="two_title">Salvare i file sul dispositivo</string>
    <string name="two_description">Condividere i messaggi in segreteria</string>
    <string name="three_title">Fotocamera</string>
    <string name="three_description">Scansiona il ICCID per attivare la sim</string>
    <string name="four_title">Notifiche</string>
    <string name="four_description">Attiva/Disattiva le notifiche</string>
    <string name="toast_notification">Notifiche: %s</string>
    <string name="toast_theme">Tema Scuro: %s</string>
    <string name="five_title">Tema Scuro</string>
    <string name="snackbar">Sei offline. I tuoi dati saranno aggiornati quando ti connetti</string>
    <string name="no_consumption">Nessun consumo</string>

    <string name="enable">Attiva</string>
    <string name="disable">Disattiva</string>
    <string name="alertbox_title" translatable="false">Ops!</string>

    <string name="alertbox_message">Ops! Qualcosa è andato storto…\nErrore imprevisto\n</string>
    <string name="alertbox_posbtn">Vai alla home</string>
    <string name="alertbox_negbtn">Segnala</string>
    <string name="dlgTitleUpdate">Aggiornamento app disponibile</string>
    <string name="dlgMsgUpdate">Gli sviluppatore di questa app richiedono che venga eseguito l\'aggiornamento a %s (%s)</string>
    <string name="dlgBtnUpdate">Scarica</string>
</resources>
