<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/color_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ChargeActivity"
    tools:showIn="@layout/activity_charge">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <LinearLayout
            android:id="@+id/card_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.cooltechworks.creditcarddesign.CreditCardView
                android:id="@+id/card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:card_holder_name="Ricarica">

            </com.cooltechworks.creditcarddesign.CreditCardView>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/nCard"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:autofillHints="creditcard"
                    android:hint="@string/edtCard"
                    android:inputType="number"
                    android:maxLength="20" />
            </android.support.design.widget.TextInputLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:theme="@style/TextLabel"
                    app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
                    app:layout_constraintStart_toStartOf="parent">


                    <EditText
                        android:id="@+id/nExpiration"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/edtExpiration"
                        android:inputType="number"
                        android:maxLength="5" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextLabel"
                    app:layout_constraintEnd_toEndOf="parent">

                    <EditText
                        android:id="@+id/ncvv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginEnd="8dp"
                        android:hint="@string/edtCvv"
                        android:inputType="number"
                        android:maxLength="4" />
                </android.support.design.widget.TextInputLayout>

            </android.support.constraint.ConstraintLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edt_password_visibility"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:autofillHints="password"
                    android:ems="10"
                    android:hint="@string/edt_password"
                    android:inputType="textPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edt_id" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_round_red"
                android:text="@string/chargeNumber"
                android:textColor="@android:color/white" />

        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

</ScrollView>